<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0, 1"
        android:stretchColumns="1">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

        <TextView
                android:text="@string/refreshing_numerical_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"/>

        <Spinner
                android:layout_width="206dp"
                android:layout_height="20dp"
                android:id="@+id/time_value_spinner"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

        <TextView
                android:text="@string/refreshing_unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_units_label"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

        <Spinner
                android:layout_width="206dp"
                android:layout_height="20dp"
                android:id="@+id/time_unit_spinner"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"/>

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

        <TextView
                android:text="@string/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLatitude"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitudeInputEditText"
                    android:hint="@string/latitude_hint"
                    android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </TableRow>


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

        <TextView
                android:text="@string/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLongitude"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id='@+id/longitudeInputEditText'
                    android:hint="@string/longitude_hint"
                    android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>
    </TableRow>
</TableLayout>
